update alignment of preventability check

--- a/src/app/preventability/preventability.component.scss
+++ b/src/app/preventability/preventability.component.scss
@@ -1,3 +1,7 @@
 .mat-radio-button {
   margin: 5px;
 }
+
+.condition-attribute-cell {
+  text-align: center;
+}
